src/test/resources/purescript_examples/failing/MultipleValueOpFixities.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith MultipleValueOpFixities\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('MultipleValueOpFixities')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('add')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('x')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('y')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
          PSIdentInfixImpl(IdentInfix)
            PSQualifiedImpl(Qualified)
              PsiElement(operator)('+')
              PsiElement(whitespace)(' ')
          PSValueImpl(Value)
            PSPrefixValueImpl(PrefixValue)
              PSVarImpl(Var)
                PSQualifiedImpl(Qualified)
                  PsiElement(identifier)('y')
                  PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSFixityDeclarationImpl(FixityDeclaration)
        PSFixityImpl(Fixity)
          PsiElement(infix)('infix')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('2')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('add')
        PsiElement(whitespace)(' ')
        PsiElement(as)('as')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('!?')
        PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSFixityDeclarationImpl(FixityDeclaration)
        PSFixityImpl(Fixity)
          PsiElement(infix)('infix')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('2')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('add')
        PsiElement(whitespace)(' ')
        PsiElement(as)('as')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('!?')
        PsiElement(whitespace)('\n')
